--- a/waterDropBeta2_Preworks2_OSC2/Assembly-CSharp-Editor.csproj
+++ b/waterDropBeta2_Preworks2_OSC2/Assembly-CSharp-Editor.csproj
@@ -11,7 +11,7 @@
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <RootNamespace></RootNamespace>
-    <ProjectGuid>{5A0769DA-25DA-A68D-BA58-6ED404CB536B}</ProjectGuid>
+    <ProjectGuid>{38708E91-930C-8F57-7221-D258FF058B6B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <AssemblyName>Assembly-CSharp-Editor</AssemblyName>
@@ -111,25 +111,25 @@
     <Compile Include="Assets\extOSC\Scripts\Editor\Windows\OSCWindowDebug.cs" />
     <Compile Include="Assets\extOSC\Scripts\Editor\Windows\OSCWindowMapping.cs" />
     <Reference Include="Unity.Timeline.Editor">
-      <HintPath>/Users/jinmacbook/Documents/GitHub/waterDrop/waterDropBeta2_Preworks2_OSC2/New Unity Project/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
+      <HintPath>/Users/jinmacbook/Documents/GitHub/waterDrop/waterDropBeta2_Preworks2_OSC2/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro.Editor">
-      <HintPath>/Users/jinmacbook/Documents/GitHub/waterDrop/waterDropBeta2_Preworks2_OSC2/New Unity Project/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
+      <HintPath>/Users/jinmacbook/Documents/GitHub/waterDrop/waterDropBeta2_Preworks2_OSC2/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.PackageManagerUI.Editor">
-      <HintPath>/Users/jinmacbook/Documents/GitHub/waterDrop/waterDropBeta2_Preworks2_OSC2/New Unity Project/Library/ScriptAssemblies/Unity.PackageManagerUI.Editor.dll</HintPath>
+      <HintPath>/Users/jinmacbook/Documents/GitHub/waterDrop/waterDropBeta2_Preworks2_OSC2/Library/ScriptAssemblies/Unity.PackageManagerUI.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Timeline">
-      <HintPath>/Users/jinmacbook/Documents/GitHub/waterDrop/waterDropBeta2_Preworks2_OSC2/New Unity Project/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
+      <HintPath>/Users/jinmacbook/Documents/GitHub/waterDrop/waterDropBeta2_Preworks2_OSC2/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
     </Reference>
     <Reference Include="Unity.CollabProxy.Editor">
-      <HintPath>/Users/jinmacbook/Documents/GitHub/waterDrop/waterDropBeta2_Preworks2_OSC2/New Unity Project/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
+      <HintPath>/Users/jinmacbook/Documents/GitHub/waterDrop/waterDropBeta2_Preworks2_OSC2/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro">
-      <HintPath>/Users/jinmacbook/Documents/GitHub/waterDrop/waterDropBeta2_Preworks2_OSC2/New Unity Project/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
+      <HintPath>/Users/jinmacbook/Documents/GitHub/waterDrop/waterDropBeta2_Preworks2_OSC2/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.DataPrivacy">
-      <HintPath>/Users/jinmacbook/Documents/GitHub/waterDrop/waterDropBeta2_Preworks2_OSC2/New Unity Project/Library/ScriptAssemblies/Unity.Analytics.DataPrivacy.dll</HintPath>
+      <HintPath>/Users/jinmacbook/Documents/GitHub/waterDrop/waterDropBeta2_Preworks2_OSC2/Library/ScriptAssemblies/Unity.Analytics.DataPrivacy.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.AIModule">
       <HintPath>/Applications/Unity/Hub/Editor/2019.1.3f1/Unity.app/Contents/Managed/UnityEngine/UnityEngine.AIModule.dll</HintPath>
@@ -333,19 +333,19 @@
       <HintPath>/Applications/Visual Studio.app/Contents/Resources/lib/monodevelop/AddIns/MonoDevelop.Unity/Editor/SyntaxTree.VisualStudio.Unity.Bridge.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.Advertisements">
-      <HintPath>/Users/jinmacbook/Documents/GitHub/waterDrop/waterDropBeta2_Preworks2_OSC2/New Unity Project/Library/PackageCache/com.unity.ads@2.0.8/Editor/UnityEditor.Advertisements.dll</HintPath>
+      <HintPath>/Users/jinmacbook/Documents/GitHub/waterDrop/waterDropBeta2_Preworks2_OSC2/Library/PackageCache/com.unity.ads@2.0.8/Editor/UnityEditor.Advertisements.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.Tracker">
-      <HintPath>/Users/jinmacbook/Documents/GitHub/waterDrop/waterDropBeta2_Preworks2_OSC2/New Unity Project/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.Tracker.dll</HintPath>
+      <HintPath>/Users/jinmacbook/Documents/GitHub/waterDrop/waterDropBeta2_Preworks2_OSC2/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.Tracker.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.Editor">
-      <HintPath>/Users/jinmacbook/Documents/GitHub/waterDrop/waterDropBeta2_Preworks2_OSC2/New Unity Project/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.Editor.dll</HintPath>
+      <HintPath>/Users/jinmacbook/Documents/GitHub/waterDrop/waterDropBeta2_Preworks2_OSC2/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.StandardEvents">
-      <HintPath>/Users/jinmacbook/Documents/GitHub/waterDrop/waterDropBeta2_Preworks2_OSC2/New Unity Project/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.StandardEvents.dll</HintPath>
+      <HintPath>/Users/jinmacbook/Documents/GitHub/waterDrop/waterDropBeta2_Preworks2_OSC2/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.StandardEvents.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.Purchasing">
-      <HintPath>/Users/jinmacbook/Documents/GitHub/waterDrop/waterDropBeta2_Preworks2_OSC2/New Unity Project/Library/PackageCache/com.unity.purchasing@2.0.6/Editor/UnityEditor.Purchasing.dll</HintPath>
+      <HintPath>/Users/jinmacbook/Documents/GitHub/waterDrop/waterDropBeta2_Preworks2_OSC2/Library/PackageCache/com.unity.purchasing@2.0.6/Editor/UnityEditor.Purchasing.dll</HintPath>
     </Reference>
     <Reference Include="mscorlib">
       <HintPath>/Applications/Unity/Hub/Editor/2019.1.3f1/Unity.app/Contents/MonoBleedingEdge/lib/mono/4.7.1-api/mscorlib.dll</HintPath>
@@ -704,7 +704,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="Assembly-CSharp.csproj">
-      <Project>{B2B58FB2-4462-6B0C-A872-40DD957E5FE0}</Project>
+      <Project>{AE0596CD-73A4-AA11-F6FD-B4667A94AB26}</Project>
       <Name>Assembly-CSharp</Name>
     </ProjectReference>
   </ItemGroup>
