--- a/waterDropBeta2_Preworks2_OSC2/Assembly-CSharp.csproj
+++ b/waterDropBeta2_Preworks2_OSC2/Assembly-CSharp.csproj
@@ -11,7 +11,7 @@
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <RootNamespace></RootNamespace>
-    <ProjectGuid>{B2B58FB2-4462-6B0C-A872-40DD957E5FE0}</ProjectGuid>
+    <ProjectGuid>{AE0596CD-73A4-AA11-F6FD-B4667A94AB26}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <AssemblyName>Assembly-CSharp</AssemblyName>
@@ -248,25 +248,25 @@
     <Compile Include="Assets\Script\transmitterTest.cs" />
     <None Include="Assets\extOSC\versions.txt" />
     <Reference Include="Unity.Timeline.Editor">
-      <HintPath>/Users/jinmacbook/Documents/GitHub/waterDrop/waterDropBeta2_Preworks2_OSC2/New Unity Project/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
+      <HintPath>/Users/jinmacbook/Documents/GitHub/waterDrop/waterDropBeta2_Preworks2_OSC2/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro.Editor">
-      <HintPath>/Users/jinmacbook/Documents/GitHub/waterDrop/waterDropBeta2_Preworks2_OSC2/New Unity Project/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
+      <HintPath>/Users/jinmacbook/Documents/GitHub/waterDrop/waterDropBeta2_Preworks2_OSC2/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.PackageManagerUI.Editor">
-      <HintPath>/Users/jinmacbook/Documents/GitHub/waterDrop/waterDropBeta2_Preworks2_OSC2/New Unity Project/Library/ScriptAssemblies/Unity.PackageManagerUI.Editor.dll</HintPath>
+      <HintPath>/Users/jinmacbook/Documents/GitHub/waterDrop/waterDropBeta2_Preworks2_OSC2/Library/ScriptAssemblies/Unity.PackageManagerUI.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Timeline">
-      <HintPath>/Users/jinmacbook/Documents/GitHub/waterDrop/waterDropBeta2_Preworks2_OSC2/New Unity Project/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
+      <HintPath>/Users/jinmacbook/Documents/GitHub/waterDrop/waterDropBeta2_Preworks2_OSC2/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
     </Reference>
     <Reference Include="Unity.CollabProxy.Editor">
-      <HintPath>/Users/jinmacbook/Documents/GitHub/waterDrop/waterDropBeta2_Preworks2_OSC2/New Unity Project/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
+      <HintPath>/Users/jinmacbook/Documents/GitHub/waterDrop/waterDropBeta2_Preworks2_OSC2/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro">
-      <HintPath>/Users/jinmacbook/Documents/GitHub/waterDrop/waterDropBeta2_Preworks2_OSC2/New Unity Project/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
+      <HintPath>/Users/jinmacbook/Documents/GitHub/waterDrop/waterDropBeta2_Preworks2_OSC2/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.DataPrivacy">
-      <HintPath>/Users/jinmacbook/Documents/GitHub/waterDrop/waterDropBeta2_Preworks2_OSC2/New Unity Project/Library/ScriptAssemblies/Unity.Analytics.DataPrivacy.dll</HintPath>
+      <HintPath>/Users/jinmacbook/Documents/GitHub/waterDrop/waterDropBeta2_Preworks2_OSC2/Library/ScriptAssemblies/Unity.Analytics.DataPrivacy.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.AIModule">
       <HintPath>/Applications/Unity/Hub/Editor/2019.1.3f1/Unity.app/Contents/Managed/UnityEngine/UnityEngine.AIModule.dll</HintPath>
@@ -452,13 +452,13 @@
       <HintPath>/Applications/Unity/Hub/Editor/2019.1.3f1/Unity.app/Contents/UnityExtensions/Unity/TestRunner/net35/unity-custom/nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.Tracker">
-      <HintPath>/Users/jinmacbook/Documents/GitHub/waterDrop/waterDropBeta2_Preworks2_OSC2/New Unity Project/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.Tracker.dll</HintPath>
+      <HintPath>/Users/jinmacbook/Documents/GitHub/waterDrop/waterDropBeta2_Preworks2_OSC2/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.Tracker.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.Editor">
-      <HintPath>/Users/jinmacbook/Documents/GitHub/waterDrop/waterDropBeta2_Preworks2_OSC2/New Unity Project/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.Editor.dll</HintPath>
+      <HintPath>/Users/jinmacbook/Documents/GitHub/waterDrop/waterDropBeta2_Preworks2_OSC2/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.StandardEvents">
-      <HintPath>/Users/jinmacbook/Documents/GitHub/waterDrop/waterDropBeta2_Preworks2_OSC2/New Unity Project/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.StandardEvents.dll</HintPath>
+      <HintPath>/Users/jinmacbook/Documents/GitHub/waterDrop/waterDropBeta2_Preworks2_OSC2/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.StandardEvents.dll</HintPath>
     </Reference>
     <Reference Include="netstandard">
       <HintPath>/Applications/Unity/Hub/Editor/2019.1.3f1/Unity.app/Contents/NetStandard/ref/2.0.0/netstandard.dll</HintPath>
