--- a/waterDropBeta2_preworks4/Assembly-CSharp.csproj
+++ b/waterDropBeta2_preworks4/Assembly-CSharp.csproj
@@ -58,25 +58,25 @@
      <Compile Include="Assets\Scripts\Valve.cs" />
      <Compile Include="Assets\Scripts\ValveGenerator.cs" />
  <Reference Include="Unity.Timeline.Editor">
- <HintPath>C:/Users/supak/OneDrive/문서/GitHub/waterDrop/waterDropBeta2_preworks4/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
+ <HintPath>C:/Users/supak/Documents/Github/waterDrop/waterDropBeta2_preworks4/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
  </Reference>
  <Reference Include="Unity.TextMeshPro.Editor">
- <HintPath>C:/Users/supak/OneDrive/문서/GitHub/waterDrop/waterDropBeta2_preworks4/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
+ <HintPath>C:/Users/supak/Documents/Github/waterDrop/waterDropBeta2_preworks4/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
  </Reference>
  <Reference Include="Unity.PackageManagerUI.Editor">
- <HintPath>C:/Users/supak/OneDrive/문서/GitHub/waterDrop/waterDropBeta2_preworks4/Library/ScriptAssemblies/Unity.PackageManagerUI.Editor.dll</HintPath>
+ <HintPath>C:/Users/supak/Documents/Github/waterDrop/waterDropBeta2_preworks4/Library/ScriptAssemblies/Unity.PackageManagerUI.Editor.dll</HintPath>
  </Reference>
  <Reference Include="Unity.Timeline">
- <HintPath>C:/Users/supak/OneDrive/문서/GitHub/waterDrop/waterDropBeta2_preworks4/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
+ <HintPath>C:/Users/supak/Documents/Github/waterDrop/waterDropBeta2_preworks4/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
  </Reference>
  <Reference Include="Unity.CollabProxy.Editor">
- <HintPath>C:/Users/supak/OneDrive/문서/GitHub/waterDrop/waterDropBeta2_preworks4/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
+ <HintPath>C:/Users/supak/Documents/Github/waterDrop/waterDropBeta2_preworks4/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
  </Reference>
  <Reference Include="Unity.TextMeshPro">
- <HintPath>C:/Users/supak/OneDrive/문서/GitHub/waterDrop/waterDropBeta2_preworks4/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
+ <HintPath>C:/Users/supak/Documents/Github/waterDrop/waterDropBeta2_preworks4/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
  </Reference>
  <Reference Include="Unity.Analytics.DataPrivacy">
- <HintPath>C:/Users/supak/OneDrive/문서/GitHub/waterDrop/waterDropBeta2_preworks4/Library/ScriptAssemblies/Unity.Analytics.DataPrivacy.dll</HintPath>
+ <HintPath>C:/Users/supak/Documents/Github/waterDrop/waterDropBeta2_preworks4/Library/ScriptAssemblies/Unity.Analytics.DataPrivacy.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.AIModule">
  <HintPath>C:/Program Files/2019.1.7f1/Editor/Data/Managed/UnityEngine/UnityEngine.AIModule.dll</HintPath>
@@ -261,20 +261,14 @@
  <Reference Include="nunit.framework">
  <HintPath>C:/Program Files/2019.1.7f1/Editor/Data/UnityExtensions/Unity/TestRunner/net35/unity-custom/nunit.framework.dll</HintPath>
  </Reference>
- <Reference Include="UnityEngine.Advertisements">
- <HintPath>C:/Users/supak/OneDrive/문서/GitHub/waterDrop/waterDropBeta2_preworks4/Library/PackageCache/com.unity.ads@2.0.8/UnityEngine.Advertisements.dll</HintPath>
- </Reference>
  <Reference Include="Unity.Analytics.Editor">
- <HintPath>C:/Users/supak/OneDrive/문서/GitHub/waterDrop/waterDropBeta2_preworks4/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.Editor.dll</HintPath>
+ <HintPath>C:/Users/supak/Documents/Github/waterDrop/waterDropBeta2_preworks4/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.Editor.dll</HintPath>
  </Reference>
  <Reference Include="Unity.Analytics.StandardEvents">
- <HintPath>C:/Users/supak/OneDrive/문서/GitHub/waterDrop/waterDropBeta2_preworks4/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.StandardEvents.dll</HintPath>
+ <HintPath>C:/Users/supak/Documents/Github/waterDrop/waterDropBeta2_preworks4/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.StandardEvents.dll</HintPath>
  </Reference>
  <Reference Include="Unity.Analytics.Tracker">
- <HintPath>C:/Users/supak/OneDrive/문서/GitHub/waterDrop/waterDropBeta2_preworks4/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.Tracker.dll</HintPath>
- </Reference>
- <Reference Include="UnityEngine.Purchasing">
- <HintPath>C:/Users/supak/OneDrive/문서/GitHub/waterDrop/waterDropBeta2_preworks4/Library/PackageCache/com.unity.purchasing@2.0.6/UnityEngine.Purchasing.dll</HintPath>
+ <HintPath>C:/Users/supak/Documents/Github/waterDrop/waterDropBeta2_preworks4/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.Tracker.dll</HintPath>
  </Reference>
  <Reference Include="netstandard">
  <HintPath>C:/Program Files/2019.1.7f1/Editor/Data/NetStandard/ref/2.0.0/netstandard.dll</HintPath>
